src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Open - Mailed Brochure</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Deskcom__twitter_username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Fundraising Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Honor_Student_Code__c</fullName>
        <inlineHelpText>Found on mailing panel.</inlineHelpText>
        <label>Honor Student Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send JSA Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RapLeaf__RapLeafInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RapLeafInfo</label>
        <referenceTo>RapLeaf__RapLeafInfo__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SS_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Summer School Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SY_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Symposia Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Prospect Insight Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Prospect Insight campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Prospect Insight Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Prospect Insight Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Prospect Insight created date represents the date and time at which the Prospect record was created in Prospect Insight. This will often differ from your Salesforce.com created date.</description>
        <label>Prospect Insight Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Prospect Insight First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Prospect Insight grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Prospect Insight system and cannot be edited in Salesforce.com.</description>
        <label>Prospect Insight Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Prospect Insight Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Prospect Insight Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Prospect Insight score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Prospect Insight system and cannot be edited in Salesforce.com.</description>
        <label>Prospect Insight Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Prospect Insight. From there you can view his or her complete activity history. This URL is generated within the Prospect Insight system and cannot be edited in Salesforce.com.</description>
        <label>Prospect Insight URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>OnlineDonation</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Online Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <description>Used for summer program leads, and other new students expressing interest in JSA programs</description>
        <label>Student</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher_Counselor</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <description>Teachers or counselors who nominate or recommend students</description>
        <label>Teacher/Counselor</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>